crates/scene/tests/snapshots/diagnostics__handle_clash.snap
---
source: crates/scene/tests/diagnostics.rs
expression: render_errors(&errs)
---
scene/handle-clash

  × handle `@shell` declared more than once
   ╭─[handle_clash.kdl:1:1]
 1 │ scene "clash" {
   · ▲▲
   · │╰── duplicate here
   · ╰── first declared here
 2 │     layout {
   ╰────
  help: Handles are flat-namespaced across tabs and panes. Rename one of the occurrences so the reconciler can tell them apart.
