crates/scene/tests/snapshots/diagnostics__handle_multiple_errors.snap
---
source: crates/scene/tests/diagnostics.rs
expression: render_errors(&errs)
---
scene/handle-missing

  × `tab` node is missing its required `@handle`
   ╭─[handle_multiple_errors.kdl:1:1]
 1 │ scene "multi-err" {
   · ▲
   · ╰── needs an `@handle` here
 2 │     layout {
   ╰────
  help: Every `tab` and `pane` needs an `@handle`. Handles are the reconciler's identity keys — without them ark cannot map desired-state panes back to running zellij panes.

scene/handle-missing

  × `pane` node is missing its required `@handle`
   ╭─[handle_multiple_errors.kdl:1:1]
 1 │ scene "multi-err" {
   · ▲
   · ╰── needs an `@handle` here
 2 │     layout {
   ╰────
  help: Every `tab` and `pane` needs an `@handle`. Handles are the reconciler's identity keys — without them ark cannot map desired-state panes back to running zellij panes.

scene/handle-clash

  × handle `@dup` declared more than once
   ╭─[handle_multiple_errors.kdl:1:1]
 1 │ scene "multi-err" {
   · ▲▲
   · │╰── duplicate here
   · ╰── first declared here
 2 │     layout {
   ╰────
  help: Handles are flat-namespaced across tabs and panes. Rename one of the occurrences so the reconciler can tell them apart.
