crates/scene/tests/snapshots/diagnostics__handle_starts_digit.snap
---
source: crates/scene/tests/diagnostics.rs
expression: render_errors(&errs)
---
scene/handle-missing

  × `tab` node is missing its required `@handle`
   ╭─[handle_starts_digit.kdl:1:1]
 1 │ scene "digit-handle" {
   · ▲
   · ╰── needs an `@handle` here
 2 │     layout {
   ╰────
  help: Every `tab` and `pane` needs an `@handle`. Handles are the reconciler's identity keys — without them ark cannot map desired-state panes back to running zellij panes.
